Improve layout a bit for mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -38,11 +38,11 @@ body {
 nav {
   align-items: baseline;
   display: flex;
-  height: 4rem;
-  margin-top: 1rem;
+  flex-wrap: wrap;
+  margin: 1rem 0 2rem 0;
 }
 nav div {
-  margin-right: 2rem;
+  margin-left: 2rem;
 }
 nav a, nav a:visited {
   color: inherit;
@@ -50,6 +50,7 @@ nav a, nav a:visited {
 nav .my-name {
   font-size: 1.66rem;
   font-weight: 300;
+  margin-left: 0;
   text-align: right;
   width: 16rem;
 }
@@ -64,13 +65,14 @@ nav .header-nav {
 
 #two-columns {
   display: flex;
+  flex-wrap: wrap;
 }
 
 #sidebar {
-  margin-right: 2.1em;
+  flex-shrink: 0;
+  margin: 0 0 2rem 0;
   text-align: right;
   width: 15.9rem;
-  flex-shrink: 0;
 }
 #sidebar #profile-picture {
   border-radius: 2rem;
@@ -85,7 +87,7 @@ nav .header-nav {
 }
 
 main {
-  margin: 0 4rem 4rem 0;
+  margin: 0 4rem 4rem 2.1rem;
   max-width: 40rem;
 }
 main h1 {
